ipc/ipdl/test/ipdl/error/managerNoCtor.ipdl
include protocol managedNoCtor;

protocol managerNoCtor {
    manages managedNoCtor;

parent:
    // error: no ctor defined
    async __delete__();
    // We need at least one message declared so we don't just hit a syntax error.
};
